--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
+    "pro": "npm run build && cd ./server && node index.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
